--- a/jinjayaml/group_vars/all.yml
+++ b/jinjayaml/group_vars/all.yml
@@ -19,7 +19,7 @@ aaa_authentication:
 
 # aaa authorization data model
 # CLI Syntax: aaa authorization exec default group radius local
-#
+# blah
 aaa_authorization:
   exec:
     default: group radius local
